kubernetes/apps/media/radarr/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.toskbot.xyz`)
      kind: Rule
      services:
        - name: radarr
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-external-dns
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: radarr.toskbot.xyz
  tls:
  - hosts:
    - radarr.toskbot.xyz
